packages/webassemblyjs/test/fixtures/conversions/type-errors/promote/module.wast
(module (func (result f64) (f64.promote/f32 (i32.const 0))))
